# tg-ws-proxy

./: README.md  pyproject.toml  requirements-win7.txt  requirements.txt  windows.py
.github/workflows/: build.yml
